fix(room): chat messages overlapping bottom bar

--- a/src/assets/stylesheets/presence-log.scss
+++ b/src/assets/stylesheets/presence-log.scss
@@ -151,7 +151,7 @@
 :local(.presence-log-in-room) {
   position: absolute;
   left: 20px;
-  bottom: 20px;
+  bottom: 90px;
 
   :local(.presence-log-entry) {
     background-color: theme.$overlay-bg-color;
